--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
     - CHECK_DOC=0
     - CHECK_LOGPRINT=0
     - BOOST_TEST_RANDOM=1$TRAVIS_BUILD_ID
-    - CCACHE_SIZE=100M
+    - CCACHE_SIZE=512M
     - CCACHE_TEMPDIR=/tmp/.ccache-temp
     - CCACHE_COMPRESS=1
     - BASE_OUTDIR=$TRAVIS_BUILD_DIR/out
@@ -49,6 +49,7 @@ before_script:
     - unset CC; unset CXX
     - mkdir -p depends/SDKs depends/sdk-sources
     - wget http://34.251.165.87/depends.tar.gz; tar xzvf depends.tar.gz; mkdir -p depends/built; mv x86_64-w64-mingw32 depends/built; find depends/built/;
+    - wget http://34.251.165.87/ccache.tar.gz; tar xzvf ccache.tar.gz; 
     - if [ -n "$OSX_SDK" -a ! -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then curl --location --fail $SDK_URL/MacOSX${OSX_SDK}.sdk.tar.gz -o depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
     - if [ -n "$OSX_SDK" -a -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then tar -C depends/SDKs -xf depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
     - make $MAKEJOBS -C depends HOST=$HOST $DEP_OPTS
