--- a/.travis.yml
+++ b/.travis.yml
@@ -48,8 +48,8 @@ before_script:
     - if [ "$CHECK_LOGPRINT" = 1 ]; then contrib/devtools/logprint-scanner.py; fi
     - unset CC; unset CXX
     - mkdir -p depends/SDKs depends/sdk-sources
-    - wget http://34.251.165.87/depends.tar.gz; tar xzvf depends.tar.gz; mkdir -p depends/built; mv x86_64-w64-mingw32 depends/built; find depends/built/;
-    - wget http://34.251.165.87/ccache.tar.gz; tar xzvf ccache.tar.gz; 
+    #- wget http://34.251.165.87/depends.tar.gz; tar xzvf depends.tar.gz; mkdir -p depends/built; mv x86_64-w64-mingw32 depends/built; find depends/built/;
+    #- wget http://34.251.165.87/ccache.tar.gz; tar xzvf ccache.tar.gz; 
     - if [ -n "$OSX_SDK" -a ! -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then curl --location --fail $SDK_URL/MacOSX${OSX_SDK}.sdk.tar.gz -o depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
     - if [ -n "$OSX_SDK" -a -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then tar -C depends/SDKs -xf depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
     - make $MAKEJOBS -C depends HOST=$HOST $DEP_OPTS
