--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,8 @@ before_script:
     #- wget http://34.251.165.87/ccache.tar.gz; tar xzvf ccache.tar.gz; 
     - if [ -n "$OSX_SDK" -a ! -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then curl --location --fail $SDK_URL/MacOSX${OSX_SDK}.sdk.tar.gz -o depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
     - if [ -n "$OSX_SDK" -a -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then tar -C depends/SDKs -xf depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
-    - make $MAKEJOBS -C depends HOST=$HOST $DEP_OPTS
+    # - make $MAKEJOBS -C depends HOST=$HOST $DEP_OPTS
+    - timeout 1200 make $MAKEJOBS -C depends HOST=$HOST $DEP_OPTS || travis_terminate 0
 script:
     - export TRAVIS_COMMIT_LOG=`git log --format=fuller -1`
     - if [ -n "$USE_SHELL" ]; then export CONFIG_SHELL="$USE_SHELL"; fi
